[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/score/score_entry.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Trigram.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 2 )

[node name="ScoreEntry" type="HBoxContainer"]
anchor_right = 1.0
margin_bottom = 17.0
script = ExtResource( 1 )

[node name="NameLabel" type="Label" parent="."]
margin_right = 380.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "n"
align = 1

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 388.0
margin_right = 768.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "n"
align = 1

[node name="SecondsLabel" type="Label" parent="."]
visible = false
margin_left = 258.0
margin_right = 509.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "n"
align = 1

[node name="DiedLabel" type="Label" parent="."]
visible = false
margin_left = 388.0
margin_right = 768.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "n"
align = 1
